Fixed #303: editor contents collapsed when the parent div of the JSONEditor has no height set

--- a/src/css/jsoneditor.css
+++ b/src/css/jsoneditor.css
@@ -1,4 +1,8 @@
 
+div.jsoneditor {
+
+}
+
 div.jsoneditor-field,
 div.jsoneditor-value,
 div.jsoneditor-readonly {
@@ -204,6 +208,11 @@ div.jsoneditor-outer {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+}
+
+textarea.jsoneditor-text,
+.ace-jsoneditor {
+  min-height: 150px;
 }
 
 div.jsoneditor-tree {
